--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Todd Dobbs</h1>
-  <p>Please see <a href="https://orcid.org/0000-0001-6711-6962" target=_blank>ORCiD</a> for more information.</p>
+  <p>Please follow <a href="https://sites.google.com/uncc.edu/prof-todd-dobbs" target=_blank>this link</a> for more information.</p>
 </body>
 </html>
